fixed spacing on front page

--- a/main.css
+++ b/main.css
@@ -103,7 +103,7 @@
 
 /*------------------header-----------------*/
 header {
-    margin: 120px 0px 165px 60px;
+    margin: 90px 0px 155px 60px;
     text-align: left;
 }
 
